--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,4 @@
 theme: jekyll-theme-minimal
 logo: https://upload.wikimedia.org/wikipedia/commons/d/de/Nulp_logo_ukr.jpg
 google_analytics: UA-120902316-2
+use_bundle: true
