--- a/software-construction/projects/Tetris/MyGame/MyGame.csproj
+++ b/software-construction/projects/Tetris/MyGame/MyGame.csproj
@@ -3,7 +3,8 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp2.1</TargetFramework>
-    <RootNamespace>lab_2</RootNamespace>
+    <RootNamespace>MyGame</RootNamespace>
+    <!-- <RuntimeIdentifier>osx.10.12-x64</RuntimeIdentifier> -->
   </PropertyGroup>
 
 </Project>
