--- a/software-construction/projects/Tetris/Game/Game.csproj
+++ b/software-construction/projects/Tetris/Game/Game.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp2.1</TargetFramework>
-    <RootNamespace>MyGame</RootNamespace>
+    <RootNamespace>Game</RootNamespace>
     <!-- <RuntimeIdentifier>osx.10.12-x64</RuntimeIdentifier> -->
   </PropertyGroup>
 
