--- a/databases/docker-compose.yml
+++ b/databases/docker-compose.yml
@@ -12,9 +12,14 @@ services:
     build: server
     ports:
       - "3000:3000"
-    # links:
-    #   - "db:database"
     env_file: .env
     volumes:
       - ./server:/server
     command: yarn start
+  pgadmin:
+    image: dpage/pgadmin4
+    ports:
+      - "80:80"
+    volumes:
+      - "./pgadmin-servers.json:/pgadmin4/servers.json:ro"
+    env_file: .env
