--- a/databases/docker-compose.yml
+++ b/databases/docker-compose.yml
@@ -14,6 +14,7 @@ services:
     env_file: .env
     volumes:
       - ./server:/server
+      - ./frontend/dist:/server/static
     command: yarn start
   pgadmin:
     image: dpage/pgadmin4
