--- a/databases/server/package.json
+++ b/databases/server/package.json
@@ -10,7 +10,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "koa": "^2.7.0",
-    "koa-router": "^7.4.0"
+    "body-parser": "^1.19.0",
+    "express": "^4.17.1",
+    "nodemon": "^1.19.1"
   }
 }
