--- a/databases/docker-compose.yml
+++ b/databases/docker-compose.yml
@@ -15,6 +15,8 @@ services:
     volumes:
       - ./server:/server
       - ./frontend/dist:/server/static
+    links:
+      - "db:database"
     command: yarn start
   pgadmin:
     image: dpage/pgadmin4
