--- a/databases/frontend/package.json
+++ b/databases/frontend/package.json
@@ -53,6 +53,7 @@
     "react-dom": "^16.7.0",
     "react-media": "^1.9.2",
     "react-redux": "^6.0.0",
+    "react-router-dom": "^5.0.1",
     "redux": "^4.0.1",
     "redux-devtools-extension": "^2.13.7",
     "redux-recycle": "^1.4.0",
