--- a/signals/lab-1/lab-1.csproj
+++ b/signals/lab-1/lab-1.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp2.2</TargetFramework>
-    <RootNamespace>lab_1_2</RootNamespace>
+    <RootNamespace>lab_1</RootNamespace>
   </PropertyGroup>
 
 </Project>
