--- a/databases/.env
+++ b/databases/.env
@@ -2,12 +2,11 @@ SERVER_PORT=3000
 SERVER_ROUTE_HOT_RELOAD=true
 
 POSTGRES_PORT=5432
-POSTGRES_DB=main
+POSTGRES_DB=admin
 POSTGRES_USER=admin
 POSTGRES_PASSWORD=admin
 
 PGADMIN_DEFAULT_EMAIL=admin
 PGADMIN_DEFAULT_PASSWORD=admin
-
 
 SECRET_KEY=MY_SECRET
