--- a/databases/docker-compose.yml
+++ b/databases/docker-compose.yml
@@ -6,6 +6,7 @@ services:
       - "${POSTGRES_PORT}:5432"
     volumes:
       - ./db:/db
+      - ./db/sql:/docker-entrypoint-initdb.d:ro
     env_file: .env
   server:
     build: server
