added openssl link

--- a/security/lab4/Makefile
+++ b/security/lab4/Makefile
@@ -1,6 +1,7 @@
 
 lab4.exec: main.c
-	gcc main.c -lssl -lcrypto -o lab4.exec
+# 	gcc main.c -lssl -lcrypto -o lab4.exec
+	gcc main.c -o lab4.exec
 
 run: lab4.exec
 	./lab4.exec
